// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PresetButton > renders expected markup 1`] = `
<div>
  <button
    aria-pressed="false"
    class="flex-1 rounded-lg border px-4 py-2 text-white transition-colors focus:ring-2 focus:ring-blue-500 focus:outline-none border-gray-600 bg-gray-700 hover:bg-gray-600"
    type="button"
  >
    Test Button
  </button>
</div>
`;

exports[`PresetButton > renders expected markup 2`] = `
<div>
  <button
    aria-pressed="true"
    class="flex-1 rounded-lg border px-4 py-2 text-white transition-colors focus:ring-2 focus:ring-blue-500 focus:outline-none border-blue-500 bg-blue-600 hover:bg-blue-700"
    type="button"
  >
    Active Button
  </button>
</div>
`;
